Modify index pag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello from Jenkins CI/CD!</h1>
-    <p>This page updates automatically when I push to GitHub.</p>
-    
+    <p style="color: #f37;">This page updates automatically when I push to GitHub.</p>
+
 </body>
 </html>
